force-app/main/default/objects/Registration_History__c/Registration_History__c.object-meta.xml
<CustomObject>
    <label>Registration History</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Registration History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>