force-app/main/default/objects/Registration_History__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>