force-app/main/default/objects/Registration_History__c/fields/Approved_application__c.field-meta.xml
<CustomField>
    <fullName>Approved_application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Registration History</relationshipLabel>
    <relationshipName>Registration_History</relationshipName>
    <type>Lookup</type>
</CustomField>