force-app/main/default/objects/Registration_History__c/fields/Current_Class__c.field-meta.xml
<CustomField>
    <fullName>Current_Class__c</fullName>
    <label>Current Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practicing Direct</fullName>
            </value>
            <value>
                <fullName>Practicing Indirect</fullName>
            </value>
            <value>
                <fullName>Non-Practicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>