force-app/main/default/objects/Registration_History__c/fields/Initial_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Registration_Date__c</fullName>
    <label>Initial Registration Date</label>
    <type>Date</type>
</CustomField>