force-app/main/default/objects/Registration_History__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Payment_Registration_History</relationshipName>
    <type>Lookup</type>
</CustomField>