force-app/main/default/objects/Registration_History__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>Permit__c</referenceTo>
    <relationshipLabel>Registration History</relationshipLabel>
    <relationshipName>Permit_Registration_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>