force-app/main/default/objects/Registration_History__c/fields/Previous_Class__c.field-meta.xml
<CustomField>
    <fullName>Previous_Class__c</fullName>
    <label>Previous Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practicing Direct</fullName>
            </value>
            <value>
                <fullName>Practicing Indirect</fullName>
            </value>
            <value>
                <fullName>Non-Practicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>