force-app/main/default/objects/Registration_History__c/fields/Previous_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Type__c</fullName>
    <label>Previous Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>