force-app/main/default/objects/Registration_History__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration History</relationshipLabel>
    <relationshipName>Account_Registration_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>