force-app/main/default/objects/Registration_History__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Registration History</relationshipLabel>
    <relationshipName>Registration_Registration_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>