force-app/main/default/objects/Registration_History__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stream Update</fullName>
            </value>
            <value>
                <fullName>Registration Renewal</fullName>
            </value>
            <value>
                <fullName>Permit Renewal</fullName>
            </value>
            <value>
                <fullName>License Renewal</fullName>
                <isActive>false</isActive>
                <label>License Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>