force-app/main/default/objects/Registration_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Type__c</columns>
    <columns>Registration__c</columns>
    <columns>Permit__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>